--- a/styles.css
+++ b/styles.css
@@ -2,10 +2,14 @@ body {
     background-color: rgb(255, 255, 165);
 }
 
-.image{
-    border: 5px solid green;
-    border-radius: 10px;
+.image {
+    width: 100%;
     height: 400px;
+    object-fit: cover;
+    border-radius: 15px;
+    box-shadow: 0 6px 15px rgba(0, 0, 0, 0.2);
+    display: block;
+    margin: 0 auto;
 }
 
 .link-button {
